--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/lakshmiprasannaG/flower-catalog/issues"
   },
-  "homepage": "https://github.com/lakshmiprasannaG/flower-catalog#readme"
+  "homepage": "https://github.com/lakshmiprasannaG/flower-catalog#readme",
+  "devDependencies": {
+    "supertest": "^6.2.4"
+  }
 }
