--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/lakshmiprasannaG/flower-catalog#readme",
   "devDependencies": {
     "supertest": "^6.2.4"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
