--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "supertest": "^6.2.4"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "morgan": "^1.10.0"
   }
